Versão com texto no rodapé

--- a/index.html
+++ b/index.html
@@ -518,13 +518,13 @@
 <div id="Corpo14" class="container text-center">
     <div class="row gy-5 gx-3"> 
         <div class="col c14Noticias">
-            <p> Atendimento domiciliar com uso de tecnologia modificou o curso de vida de uma usuária do SUS.</p>
+            <p> <b> Atendimento domiciliar com uso de tecnologia modificou o curso de vida de uma usuária do SUS. </b></p>
             <a href="https://ubsmaisdigital.com.br/saiu-na-midia/" target="_blank">
             <img class="imgCorpo14" src="Imagens/Noticia-1.png" alt="Noticia">
             </a>
         </div>
         <div class="col c14Noticias">
-            <p>Confira a matéria que saiu na mídia sobre a UBS Paissandu, localizada em Santarém no Pará.</p>
+            <p> <b>Confira a matéria que saiu na mídia sobre a UBS Paissandu, localizada em Santarém no Pará. </b></p>
             <a href="https://ubsmaisdigital.com.br/esf-de-paissandu-modificou-o-cursode-vida-de-uma-usuaria-do-sus/" target="_blank">
             <img class="imgCorpo142" src="Imagens/Noticia-2.png" alt="Noticia2">
             </a>
@@ -580,6 +580,7 @@
 
 <!--RODAPÉ-->
     <footer>
+        <p class="textoRodape">Serviço oferecido por:</p>
         <img class="imgInstituicoes" src="Imagens/Instituicoes.png" alt="Instituicoes">
         <img class="imgRodape" src="Imagens/Rodape.png" alt="Rodape">
         <p class="texto1Rodape" >&copy; 2025 - Todos os direitos reservados.</p>
