Versão com atualizações no HTML e JS para melhor organização do código

--- a/index.html
+++ b/index.html
@@ -1065,7 +1065,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="Script.js" defer></script>
+    <script src="script.js" defer></script>
     <script
       src="https://cdn.userway.org/widget.js"
       data-account="i0r1DXX4Us"
