Carrossel da equipe atualizado com os novos MFCs

--- a/index.html
+++ b/index.html
@@ -232,6 +232,26 @@
         src="Carrossel Equipe/PedroMoscadini.png"
         alt="Imagem 8"
         class="imgCarrossel" />
+      <img
+        src="Carrossel Equipe/Marcelo.png"
+        alt="Imagem 8"
+        class="imgCarrossel" />
+      <img
+        src="Carrossel Equipe/Jessica.png"
+        alt="Imagem 8"
+        class="imgCarrossel" />
+      <img
+        src="Carrossel Equipe/Lorrany.png"
+        alt="Imagem 8"
+        class="imgCarrossel" />
+      <img
+        src="Carrossel Equipe/Nayara.png"
+        alt="Imagem 8"
+        class="imgCarrossel" />
+      <img
+        src="Carrossel Equipe/Hugo.png"
+        alt="Imagem 8"
+        class="imgCarrossel" />
     </div>
     <div class="carousel-controls">
       <button class="prev">❮</button>
