CXorreção no nome das médicas e responsividades

--- a/index.html
+++ b/index.html
@@ -125,17 +125,17 @@
       <div class="divbtn">
         <button
           class="btnSUSito"
-          onclick="redirectTo('https://agenciasus.org.br/')">
+          onclick="redirectTo('https://agenciasus.org.br/')" target="_blank">
           AgSUS
         </button>
         <button
           class="btnSUSito"
-          onclick="redirectTo('https://saudedigital.agenciasus.org.br/')">
+          onclick="redirectTo('https://saudedigital.agenciasus.org.br/')" target="_blank">
           Home
         </button>
         <button
           class="btnSUSito"
-          onclick="redirectTo('https://wa.me/556136865550')">
+          onclick="redirectTo('https://wa.me/556136865550')" target="_blank">
           WhatsApp
         </button>
       </div>
@@ -839,12 +839,14 @@
   </section>
 
   <!--CORPO 12 - COMUNIDADE DE PRÁTICAS-->
+  <section id="Corpo12">
   <h1 class="tituloCorpo12" id="Corpo12Ancora">
     <b>
       COMUNIDADE PRÁTICA <span style="font-weight: normal">DO</span> NÚCLEO
       <span style="font-weight: normal">DE</span> SAÚDE DIGITAL
     </b>
   </h1>
+  </section>
   <!--<div class="barrasContainer">
     <div class="designLinha" style="background-color: #ffbd59"></div>
     <div class="designLinha" style="background-color: #fe5558"></div>
@@ -852,7 +854,7 @@
     <div class="designLinha" style="background-color: #00a79d"></div>
     <div class="designLinha" style="background-color: #71d285"></div>
   </div> --> 
-  <div class="d-flex flex-column align-it ems-center">
+  <div class="d-flex flex-column align-it ems-center comunidade ">
     <h2 class="tituloCorpo12v2">
       SOBRE <span style="font-weight: normal">A</span> COMUNIDADE:
     </h2>
@@ -979,11 +981,11 @@
         nosso time:
       </p>
       <p class="textoC15D">
-        <i class="fa-solid fa-square-phone"></i> (61) 99810-9919
+        <i class="fa-solid fa-square-phone"></i> (61) 3686-5550
       </p>
       <p class="textoC15D">
         <i class="fa-solid fa-square-envelope"></i>
-        saudedigital@agenciasus.org.br
+        faleconosco@agenciasus.org.br
       </p>
     </div>
     <div class="redesSociais">
@@ -1007,9 +1009,6 @@
         </a>
         <p>Facebook.com/NSDAgSUS</p>
       </div>
-    </div>
-    <div>
-      <img class="imgRedesSociaisSUSito" src="Imagens/SUSito.png" alt="" />
     </div>
   </div>
   <div class="barrasContainer">
