Atualização do carrossel, redes sociais e comunidade de práticas

--- a/index.html
+++ b/index.html
@@ -556,12 +556,12 @@
         <img class="imgC9D" src="Imagens/PMedico.png" alt="PMédico" />
         <h2 class="tituloC9D">
           <b>É Médico de Família e Comunidade e tem interesse de atuar no NSD?
-            Envie seu currículo para o banco de talentos da AgSUS!</b>
+            Envie seu currículo para a AgSUS!</b>
         </h2>
         <a
           class="btnC9D botao"
           href="https://agenciasus.org.br/trabalheconosco/"
-          target="_blank">Banco de talentos da AgSUS</a>
+          target="_blank">Trabalhe conosco</a>
       </div>
     </div>
   </section>
@@ -842,7 +842,7 @@
   <section id="Corpo12">
   <h1 class="tituloCorpo12" id="Corpo12Ancora">
     <b>
-      COMUNIDADE PRÁTICA <span style="font-weight: normal">DO</span> NÚCLEO
+      COMUNIDADE DE PRÁTICAS <span style="font-weight: normal">DO</span> NÚCLEO
       <span style="font-weight: normal">DE</span> SAÚDE DIGITAL
     </b>
   </h1>
@@ -992,22 +992,17 @@
       <h2>Acompanhe nossas redes sociais:</h2>
       <div>
         <a
-          href="https://www.instagram.com/saudedigital_agsus/"
+          href="https://www.instagram.com/agenciasus/"
           target="_blank">
           <img src="Imagens/Instagram.png" alt="Instagram" />
         </a>
-        <p>@saudedigital_agsus</p>
+        <p>@agenciasus</p>
       </div>
       <div>
-        <a href="https://www.linkedin.com/in/nsdagsus/" target="_blank">
+        <a href="https://www.linkedin.com/company/agenciasus/" target="_blank">
           <img src="Imagens/Linkedin.png" alt="LinkedIn" />
         </a>
-        <p>Linkedin.com/NSDAgsus</p>
-      </div>
-      <div>
-        <a href="https://www.facebook.com/NSDAgSUS/" target="_blank"><img src="Imagens/Facebook.png" alt="Facebook" />
-        </a>
-        <p>Facebook.com/NSDAgSUS</p>
+        <p>Linkedin.com/agenciasus</p>
       </div>
     </div>
   </div>
