Correções de responsividades

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <div class="conteudo-c2">
         <img
           class="imagem-susete"
-          src="Imagens/SUSete.jpeg"
+          src="Imagens/SUSete.png"
           alt="Mascote Susete" />
         <p class="texto-c2">
           O Núcleo de Saúde Digital (NSD) é uma iniciativa da AgSUS criada para
